Update script filter.
* Use python;
* Get window arrangements using the OSX defaults system.
  This allows the workflow to get arrangements if iTerm app is not open
* Proper XML generation

--- a/templates/info.plist.j2
+++ b/templates/info.plist.j2
@@ -24,7 +24,7 @@
 				<key>argumenttype</key>
 				<integer>1</integer>
 				<key>escaping</key>
-				<integer>0</integer>
+				<integer>68</integer>
 				<key>keyword</key>
 				<string>iwin</string>
 				<key>queuedelaycustom</key>
@@ -36,11 +36,11 @@
 				<key>queuemode</key>
 				<integer>1</integer>
 				<key>script</key>
-                <string>{{ files['scripts/filter_arrangements.applescript'] | cdata }}</string>
+                <string>{{ files['scripts/filter_arrangements.py'] | cdata }}</string>
 				<key>title</key>
 				<string>Restore an iTerm Window Arrangement</string>
 				<key>type</key>
-				<integer>6</integer>
+				<integer>3</integer>
 				<key>withspace</key>
 				<true/>
 			</dict>
